--- a/ansible/sample-desktop-setup/macos-brew.yml
+++ b/ansible/sample-desktop-setup/macos-brew.yml
@@ -31,6 +31,8 @@ brew:
         - ripgrep
         - rust
         - sleepwatcher
+        ## socat required for gui apps
+        - socat
         - ssh-copy-id
         - the_silver_searcher
         - tmux
@@ -53,4 +55,6 @@ brew_cask:
         - slack
         - steam
         - visual-studio-code
+        ## xquartz required for gui 
+        - xquartz
         
