--- a/ansible/docker-applications/tasks/main.yml
+++ b/ansible/docker-applications/tasks/main.yml
@@ -117,7 +117,7 @@
     src: "{{ project_home }}/templates/app-start-docker-macos.j2"
     dest: "{{ desktop_dir }}/apps/{{ item.key }}/{{ item.key }}"
     mode: 0770
-  when: item.value.implementation_type == "docker" and apps.applications is defined ansible_system == 'Darwin' 
+  when: item.value.implementation_type == "docker" and apps.applications is defined and ansible_system == 'Darwin' 
   with_dict: "{{ apps.applications | default({}) }}"
 
 # create docker_compose file
