--- a/ansible/linux-gnome-desktop-settings/tasks/main.yml
+++ b/ansible/linux-gnome-desktop-settings/tasks/main.yml
@@ -86,15 +86,24 @@
     dest: "{{ local_home }}/.xinit"
     mode: 0777
   become: true
+  when: 
+    - '{{ settings.x11_config }}' is defined
+    - '{{ settings.x11_config.user_x11_config_files | default(false) }}'
 
-# - name: Create symbolic link for .xsession
-#   file:
-#     src: "{{ local_home }}/.xinit"
-#     dest: "{{ local_home }}/.xsession"
-#     state: link
+- name: Create symbolic link for .xsession
+  file:
+    src: "{{ local_home }}/.xinit"
+    dest: "{{ local_home }}/.xsession"
+    state: link
+  when: 
+    - '{{ settings.x11_config }}' is defined
+    - '{{ settings.x11_config.user_x11_config_files | default(false) }}'
 
-# - name: Create symbolic link for .xsessionrc
-#   file:
-#     src: "{{ local_home }}/.xinit"
-#     dest: "{{ local_home }}/.xsessionrc"
-#     state: link
+- name: Create symbolic link for .xsessionrc
+  file:
+    src: "{{ local_home }}/.xinit"
+    dest: "{{ local_home }}/.xsessionrc"
+    state: link
+  when:
+    - '{{ settings.x11_config }}' is defined
+    - '{{ settings.x11_config.user_x11_config_files | default(false) }}'
