--- a/ansible/sample-desktop-setup/linux-gnome-settings.yml
+++ b/ansible/sample-desktop-setup/linux-gnome-settings.yml
@@ -47,4 +47,5 @@ gnome_background:
     screensaver_background:
       type: screensaver 
       background_url: https://wallpapertag.com/wallpaper/full/f/1/2/776629-free-download-linux-desktop-backgrounds-1920x1080.jpg
-    
+x11_config:
+  user_x11_config_files: true      
