--- a/ansible/provdesktop.yml
+++ b/ansible/provdesktop.yml
@@ -84,3 +84,4 @@
         name: custom-roles
       vars:
         custom_roles_dir: "{{ settings_home }}/custom_roles/"
+        WSL_LINUX: "{{ WSL_LINUX }}"
