--- a/ansible/wsl-packages/tasks/main.yml
+++ b/ansible/wsl-packages/tasks/main.yml
@@ -97,7 +97,7 @@
   become: true
 
 - name: Make sure snapd service is running
-  ansible.builtin.systemd_service:
+  systemd_service:
     state: started
     name: snapd
 
